lien vers les md pour formattage

--- a/index.html
+++ b/index.html
@@ -166,12 +166,12 @@
 
   <main>
     <div class="card-grid">
-      <a href="doc/privacy_policy_lyjob.md" class="card">
+      <a href="https://github.com/lyjob-app/lyjob-legal-doc/blob/main/doc/privacy_policy_lyjob.md" class="card">
         <h2>Politique de Confidentialité</h2>
         <p>Découvrez comment nous collectons, utilisons et protégeons vos données personnelles.</p>
       </a>
 
-      <a href="doc/cgu_lyjob.md" class="card">
+      <a href="https://github.com/lyjob-app/lyjob-legal-doc/blob/main/doc/cgu_lyjob.md" class="card">
         <h2>Conditions Générales d'Utilisation</h2>
         <p>Les règles et conditions d'utilisation de notre plateforme.</p>
       </a>
