fix formattage doc

--- a/index.html
+++ b/index.html
@@ -181,19 +181,20 @@
       <h3>À propos de ces documents</h3>
       <p>
         Ces documents sont mis à disposition publiquement pour garantir la transparence de Lyjob.
+        Ils sont régulièrement mis à jour pour refléter les évolutions de notre service.
       </p>
       <p>
         Pour toute question concernant ces documents, n'hésitez pas à nous contacter via
-        <a href="https://github.com//lyjob-app/lyjob-legal-doc/issues">GitHub Issues</a>.
+        <a href="https://github.com/lyjob-legal-doc/legal/issues">GitHub Issues</a>.
       </p>
       <p>
-        Dernière mise à jour : <strong>Novembre 2025</strong>
+        Dernière mise à jour : <strong>Novembre 2024</strong>
       </p>
     </div>
   </main>
 
   <footer>
-    © Lyjob - Tous droits réservés
+    © Lyjob — Tous droits réservés
   </footer>
 </body>
 </html>
